# InfiniLM-MoE-CUDA

./: Cargo.toml
models/mixtral/common/src/: config.rs  lib.rs
models/mixtral/cpu/src/: infer.rs  lib.rs
models/mixtral/nvidia-gpu-distributed/: Cargo.toml
models/mixtral/nvidia-gpu-distributed/src/: lib.rs  parameters.rs
xtask/: Cargo.toml
xtask/src/: main.rs
